WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249079
-webkit-mask-box-image:initial is not the initial value
https://bugs.webkit.org/show_bug.cgi?id=249079
Summary
-webkit-mask-box-image:initial is not the initial value
Oriol Brufau
Reported
2022-12-10 14:47:04 PST
-webkit-mask-box-image is stored in StyleRareNonInheritedData::maskBoxImage, which is initialized to: NinePieceImage(NinePieceImage::Type::Mask) However, -webkit-mask-box-image:initial sets it to NinePieceImage() This implies that with -webkit-mask-box-image:initial, - fill is false instead of true. - imageSlices contains Length(100,LengthType::Percent) instead of Length(0,LengthType::Fixed). - borderSlices contains Length(1,LengthType::Relative) instead of Length(0,LengthType::Auto).
Attachments
Add attachment
proposed patch, testcase, etc.
Oriol Brufau
Comment 1
2022-12-11 09:21:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7452
EWS
Comment 2
2022-12-11 15:18:10 PST
Committed
257707@main
(20eb361ea099): <
https://commits.webkit.org/257707@main
> Reviewed commits have been landed. Closing PR #7452 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-12-11 15:19:16 PST
<
rdar://problem/103232454
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug