Let '-webkit-mask-box-image:initial' use the initial value https://bugs.webkit.org/show_bug.cgi?id=249079

Reviewed by Tim Nguyen.

-webkit-mask-box-image:initial was setting it to is NinePieceImage(),
but the initial value is NinePieceImage(NinePieceImage::Type::Mask).

* LayoutTests/fast/css/getComputedStyle/getComputedStyle-webkit-mask-box-image-expected.txt: Added.
* LayoutTests/fast/css/getComputedStyle/getComputedStyle-webkit-mask-box-image.html: Added.
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/rendering/style/RenderStyle.h:
(WebCore::RenderStyle::initialNinePieceImageForMask):
(WebCore::RenderStyle::initialNinePieceImage): Deleted.

Canonical link: https://commits.webkit.org/257707@main